# MCMC

./: CMakeLists.txt  README.md  SIR_I0_10.csv  SIR_Stochastic_Data.csv  clang  config.sh  configure.sh
Binders/: random.cpp
Custom_MCMC/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Custom_MCMC  DartConfiguration.tcl  MCMC  Makefile  a.out  cmake_install.cmake  main  main.cc
Custom_MCMC/Data/: SIR_y.csv  param_1, 500, 5000.csv  param_1.csv  param_10.csv  param_15.csv  param_16.csv  param_1_200_5000.csv  param_1_50_5000.csv  param_2, 500, 5000.csv  param_2.csv  param_20.csv  param_25.csv  param_256.csv  param_2_200_5000.csv  param_2_50_5000.csv  param_3, 500, 5000.csv  param_3.csv  param_30.csv  param_3_200_5000.csv  param_3_50_5000.csv  param_4, 500, 5000.csv  param_4.csv  param_4_200_5000.csv  param_4_50_5000.csv  param_5, 500, 5000.csv  param_5.csv  param_5_200_5000.csv  param_5_50_5000.csv  param_6, 500, 5000.csv  param_6.csv  param_64.csv  param_6_200_5000.csv  param_6_50_5000.csv  param_7.csv  param_8.csv  param_out.csv  weight_1, 500, 5000.csv  weight_1.csv  weight_10.csv  weight_15.csv  (+31 more)
Custom_MCMC/Generate/: B  Boostex.cpp
Custom_MCMC/MCMC_Model/: CMakeLists.txt  CTestTestfile.cmake  MCMC_Model.hh  Makefile  cmake_install.cmake
Custom_MCMC/MCMC_Sampler/: CMakeLists.txt  CTestTestfile.cmake  MCMC_Sampler.hh  Makefile  cmake_install.cmake
Custom_MCMC/Plot/: MultiParamPlot.py  ParamPlot.py  dataPlot.py
Custom_MCMC/SIR/: CMakeLists.txt  CTestTestfile.cmake  Makefile  SIR_Stochastic.cc  SIR_Stochastic.hh
Custom_MCMC/include/: CMakeLists.txt  CTestTestfile.cmake  MCMC_Sampler.hpp  Makefile  particle.hh  particle.hpp  sampler.hh  simfunctions.hh
Custom_MCMC/src/: simfunctions.cc
Executables/: CMakeLists.txt  Parameter_Configuration.hpp  SIR.cpp  SIR_Plot.py  this_kernel_resolve.cpp
Generate/: CMakeLists.txt  Generate_SEIAR_data.cc  Generate_SEIAR_data.cpp  Generate_SEIR_data.cc  Generate_SEIR_data.cpp  Generate_SIR_data.cc  Generate_SIR_data.cpp  Integrator_Models.hpp  Makefile  SIR_Integrators.hpp  cmake_install.cmake
Kernels/: CMakeLists.txt  MCMC_Distributions.hpp  MCMC_Epidemiological.clcpp  MCMC_Epidemiological.cpp  MCMC_Epidemiological.ll  MCMC_Epidemiological.rspv  MCMC_Epidemiological.spv  MCMC_Sampler.clcpp  MCMC_Sampler.hpp  SIR_Stochastic.clcpp  SIR_Stochastic.clhpp  SIR_Stochastic.hpp  SMC_Model.clhpp  SMC_Model.hpp  SMC_Particle.clhpp  SMC_Particle.hpp  SMC_Resampling.hpp  SMC_Sampler.clcpp  SMC_Sampler.clhpp  SMC_Sampler.hpp  SMC_Utils.clhpp  graph.dot  testKernel.clcpp  testKernel.ll  testKernel.rspv  testKernel.spv
Kernels/Decompositions/: Decompositions.clcpp
Kernels/Distributions/: Distributions.clcpp  Generators.clcpp  Sampling.clcpp
Plot/: SEIAR_Param_Plot.py  SEIAR_Traj_Plot.py  SEIR_Param_Plot.py  SEIR_Traj_Plot.py  SIR_Param_Plot.py  SIR_Traj_Plot.py
SMC/: Convert.py  main.py
SMC/CModels/: MCMC_1  MCMC_1.cpp
SMC/CythonModels/: BB_SIR.c  BB_SIR.pyx  Stochastic.c  Stochastic.pyx  performance_compare.py  setup.py
SMC/Inference/: NegBin_Poisson_test.py  distributions.py
SMC/Integrator/: ERK.py  Implicit.py  RK45_test.py  theano_SIR.py
SMC/MCMC/: DifferentialEquationDiscrete.py  ODEop.py  PyMC3_Example.py  SIR_Example.py  SIR_Example_2.py  SIR_example.py  Untitled.ipynb
SMC/Networks/: WS_example_1.py
SMC/Plot/: plot_stochastic.py  pymc_dataplot.py
SMC/models/: CustomStep.py  Discrete_SMC.py  Epidemiological.py  HMC.py  Prior.py  SIR_SMC.py  SIR_model.py  Theano_Ops.py  test.py
SMC/sysid/: Candidates.py  FROLS.py  FROLS_test.py
Simulation_Scripts/: CMakeLists.txt  Parameter_Configuration.hh  Parameter_Configuration.hpp  run_SEIAR.cc  run_SEIAR.cpp  run_SEIR.cc  run_SEIR.cpp  run_SIR.cc  run_SIR.cpp
Utils/: CLCPP_MCMC_FilePaths.hpp.in  CMakeLists.txt
cmake/: custom_executable.cmake  external_packages.cmake
doc/html/: annotated.html  annotated_dup.js  classes.html  classsmc_1_1exception-members.html  classsmc_1_1exception.html  classsmc_1_1exception.js  classsmc_1_1exception__coll__graph.dot  classsmc_1_1gslrnginfo-members.html  classsmc_1_1gslrnginfo.html  classsmc_1_1gslrnginfo.js  classsmc_1_1gslrnginfo__coll__graph.dot  classsmc_1_1history-members.html  classsmc_1_1history.html  classsmc_1_1history.js  classsmc_1_1history__coll__graph.dot  classsmc_1_1history__inherit__graph.dot  classsmc_1_1historyelement-members.html  classsmc_1_1historyelement.html  classsmc_1_1historyelement.js  classsmc_1_1historyelement__coll__graph.dot  classsmc_1_1historyelement__inherit__graph.dot  classsmc_1_1historyflags-members.html  classsmc_1_1historyflags.html  classsmc_1_1historyflags.js  classsmc_1_1historyflags__coll__graph.dot  classsmc_1_1moveset-members.html  classsmc_1_1moveset.html  classsmc_1_1moveset.js  classsmc_1_1moveset__coll__graph.dot  classsmc_1_1particle-members.html  classsmc_1_1particle.html  classsmc_1_1particle.js  classsmc_1_1particle__coll__graph.dot  classsmc_1_1rng-members.html  classsmc_1_1rng.html  classsmc_1_1rng.js  classsmc_1_1rng__coll__graph.dot  classsmc_1_1sampler-members.html  classsmc_1_1sampler.html  classsmc_1_1sampler.js  (+79 more)
doc/latex/: annotated.tex  classsmc_1_1rng.tex  (+62 more)
include/: CMakeLists.txt  Distributions.hpp  MCMC_SIR.hpp  MCMC_Sampler.cpp  MCMC_Sampler.hh  MCMC_Sampler.hpp  Particle.hh  SEIAR_Stochastic.cpp  SEIAR_Stochastic.hh  SEIAR_Stochastic.hpp  SEIR_Stochastic.cpp  SEIR_Stochastic.hh  SEIR_Stochastic.hpp  SIR_Stochastic.cpp  SIR_Stochastic.hh  SIR_Stochastic.hpp  SMC_Model.hh  SMC_Model.hpp  SMC_Particle.hpp  SMC_Sampler.cpp  SMC_Sampler.hh  SMC_Sampler.hpp  csv_parse.hpp  csv_reader.hh  csv_reader.hpp  sampler.hh
src/: CTestTestfile.cmake  MCMC_Sampler.cc  Makefile  SEIAR_Stochastic.cc  SEIR_Stochastic.cc  SIR_Stochastic.cc  SMC_Sampler.cc  cmake_install.cmake  csv_parse.cpp
test/: CMakeLists.txt  Integrator_Model_test.cpp  MCMC_Sampler_test.cpp  MCMC_testrun.cpp  MC_pi_approximation.cpp  SMC_RandomWalk_Model.hpp  SMC_Resampling_test.cpp  SMC_Sampler_test.cpp  SMC_Test_Model.hpp  t2.cpp
test/Plot/: Plot_weights.py
(+38 files in other folders)
