set(TEST_INCLUDE_DIRS ../Kernels ../Generate ${MKL_ROOT}/include)
set(MKL_TEST_LIBS MKL::mkl_sycl MKL::mkl_intel_ilp64 MKL::mkl_tbb_thread MKL::mkl_core)
set(SUNDIALS_TEST_LIBS SUNDIALS::cvode SUNDIALS::nvecserial)
set(TEST_LIBS ${MKL_TEST_LIBS} oneDPL GTest::gtest_main ${SUNDIALS_TEST_LIBS})
function(create_test test_name)
    add_executable(${test_name} ${test_name}.cpp)
    target_include_directories(${test_name} PUBLIC ${TEST_INCLUDE_DIRS})
    target_link_libraries(${test_name} PUBLIC ${TEST_LIBS})
endfunction()
create_test(SMC_Sampler_test)
create_test(MCMC_Sampler_test)
create_test(SMC_Resampling_test)
create_test(Integrator_Model_test)


include(GoogleTest)
gtest_discover_tests(SMC_Sampler_test)
gtest_discover_tests(MCMC_Sampler_test)
gtest_discover_tests(SMC_Resampling_test)
gtest_discover_tests(Integrator_Model_test)